# research-deep-agent

./: README.md  agent.py  langgraph.json  pyproject.toml
backend/: agent.py  api.py  tools.py
backend/prompts/: crawling_agent_instructions.md  orchestrator_agent_instructions.md  research_agent_instructions.md  subagent_delegation_instructions.md  task_description_prefix.md
frontend/app/: app.py
frontend/app/.streamlit/: config.toml
frontend/app/pages/: home.py  info.py  research.py
tests/: run_agent.py
workspace/: report_guidelines.md  research_request.md
workspace/large_tool_results/: call_19G3MbndFnlSafCgSs10omXr  call_4nhtKlmO0OyONMssGPYpHFGv  call_luM3nTjec0v0B2LHXO2sb1IQ
